# ecommerce-ai-helper

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: auth.py  celery_app.py  config.py
app/schemas/: task.py
app/services/: ai_service.py  storage.py
app/tasks/: image_processing.py
tests/: test_ai_service.py  test_api.py  test_schemas.py  test_storage.py
